--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,18 @@
   </head>
 
   <body>
+      <% if flash[:notice] %>
+        <div class="alert alert-success" role="alert" >
+          <%= flash[:notice] %>
+        </div>
+      <% end %>
+      
+      <% if flash[:alert] %>
+        <div class="alert alert-danger" role="alert" >
+          <%= flash[:alert] %>
+        </div>
+      <% end %>
+      
     <%= yield %>
   </body>
 </html>
