投稿機能を作成しました①

--- a/app/views/user/contents/new.html.erb
+++ b/app/views/user/contents/new.html.erb
@@ -1,2 +1,2 @@
-<h1>User::Contents#new</h1>
-<p>Find me in app/views/user/contents/new.html.erb</p>
+<%= render partial: "user/contents/form", locals: {type:"投稿する",content: @content,method: nil} %>
+
