--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,14 @@
   </head>
 
   <body>
+    <h3>ここは開ける</h1>
     <header>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        </li>
+      <% unless current_page?(root_path) %>
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          </li>
+        <% end %>
       <% end %>
     </header>
     
@@ -34,32 +37,34 @@
       
     <%= yield %>
       <footer>
-        <% if user_signed_in? %>
-          <li>
-            <%= link_to "マイページ",  mypage_users_path %>
-          </li>
-          <li>
-            <%= link_to "投稿一覧",  contents_path %>
-          </li>
-          <li>
-            <%= link_to "投稿する", new_content_path %>
-          </li>
-          <li>
-            <%= link_to "検索", find_searches_path %>
-          </li>
-        <% else %>
-          <li>
-            <%= link_to "新規登録", new_user_registration_path %>
-          </li>
-          <li>
-            <%= link_to "ログイン", new_user_session_path %>
-          </li>
-          <li>
-            <%= link_to "投稿一覧", contents_path %>
-          </li>
-          <li>
-            <%= link_to "検索", find_searches_path %>
-          </li>
+        <% unless current_page?(root_path) %>
+          <% if user_signed_in? %>
+            <li>
+              <%= link_to "マイページ",  mypage_users_path %>
+            </li>
+            <li>
+              <%= link_to "投稿一覧",  contents_path %>
+            </li>
+            <li>
+              <%= link_to "投稿する", new_content_path %>
+            </li>
+            <li>
+              <%= link_to "検索", find_searches_path %>
+            </li>
+          <% else %>
+            <li>
+              <%= link_to "新規登録", new_user_registration_path %>
+            </li>
+            <li>
+              <%= link_to "ログイン", new_user_session_path %>
+            </li>
+            <li>
+              <%= link_to "投稿一覧", contents_path %>
+            </li>
+            <li>
+              <%= link_to "検索", find_searches_path %>
+            </li>
+          <% end %>
         <% end %>
         <%= link_to "管理者ログイン", new_admin_session_path %>
       </footer>
