投稿詳細の作成

--- a/app/views/user/contents/_form.html.erb
+++ b/app/views/user/contents/_form.html.erb
@@ -37,6 +37,8 @@
     <%= f.number_field :review %>
   </div>
   
+  <%= f.hidden_field :user_id, value: @user.id %>
+  
   <%= f.submit type %>
   <%= link_to "戻る", contents_path %>
 <% end %>
