--- a/app/views/user/contents/show.html.erb
+++ b/app/views/user/contents/show.html.erb
@@ -37,6 +37,29 @@
     <td><%= @content.text %></td>
   </tr>
   <tr>
-    <th>コメントを表示</th>
+  <th>コメントを表示</th>
+    <td>
+      <% @content.comments.each do |comment| %>
+        <p>
+          <%= comment.comment %>
+          <span>
+            <%= link_to '削除', content_comment_path(comment), method: :delete, data: { confirm: '本当に削除しますか？' } %>
+          </span>
+        </p>
+      <% end %>
+    </td>
   </tr>
+</table>
+
+<table>
+  <th>コメントをする</th>
+  <td>
+    <%= form_with(model: @comment, url: content_comments_path(@content), local: true) do |f| %>
+      <div class="field">
+        <%= f.label :comment %>
+        <%= f.text_area :comment %>
+      </div>
+      <%= f.submit "コメントする" %>
+    <% end %>
+  </td>
 </table>
