退会機能を作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
           <% unless current_page?(root_path) %>
             <% if user_signed_in? %>
               <li>
-                <%= link_to "マイページ",  mypage_users_path %>
+                <%= link_to "マイページ",  mypage_path %>
               </li>
               <li>
                 <%= link_to "投稿一覧",  contents_path %>
