--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,7 +1,7 @@
 <p>アイコン</p>
 <h3><%= current_user.name %></h3>
 <h3><%= current_user.email %></h3>
-<p><%= link_to "編集する", information_edit_users_path %></p>
+<p><%= link_to "編集する", edit_information_path %></p>
 <p><%= link_to "パスワードを変更する", edit_user_registration_path %></p>
 <p>
   <span>
