--- a/app/views/user/contents/_form.html.erb
+++ b/app/views/user/contents/_form.html.erb
@@ -1,55 +1,44 @@
-<h3>サ活をレビューしよう</h3>
-<%= form_with model: content, local: true do |f| %>
-  <% if content.errors.any? %>
-    <div class="alert alert-danger">
-      <h2><%= content.errors.count %>つのエラーが発生しました</h2>
-      <ul>
-        <% content.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="form-group">
-    <label>訪問した日</label>
-    <%= f.date_field :visit_day, id: "visit-day-field" %>
-    <button type="button" id="today-button">本日</button>
-  </div>
-  <div class="form-group">
-    <label>レビュータイトル</label>
-    <%= f.text_field :title %>
-  </div>
-  <div class="form-group">
-    <label>投稿内容</label>
-    <%= f.text_area :text %>
-  </div>
-  <div class="form-group">
-    <label>タグを作るところ</label>
-    <!-- タグのフォームフィールドを追加してください -->
-  </div>
-  
-  <div class='form-group'>
-    <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
-      <div class='form-check form-check-inline'> <!-- 横並びにするためのスタイル -->
-        <%= tag.label class: 'form-check-label' do %>
-          <%= tag.check_box class: 'form-check-input' %>
-          <%= tag.text %>
-        <% end %>
+  <h3>サ活をレビューしよう</h3>
+  <%= form_with model: content, local: true, class: "my-form" do |f| %>
+    <% if content.errors.any? %>
+      <div class="alert alert-danger">
+        <h2><%= content.errors.count %>つのエラーが発生しました</h2>
+        <ul>
+          <% content.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
       </div>
     <% end %>
-  </div>
 
+    <div class="form-group">
+      <%= f.label :visit_day, "訪問した日" %>
+      <%= f.date_field :visit_day, id: "visit-day-field", class: "form-control form-control-sm" %>
+      <button type="button" id="today-button" class="btn btn-secondary btn-sm">本日</button>
+    </div>
+    <div class="form-group">
+      <%= f.label :title, "レビュータイトル" %>
+      <%= f.text_field :title, class: "form-control form-control-sm" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :text, "投稿内容" %>
+      <%= f.text_area :text, class: "form-control form-control-sm", rows: 3 %>
+    </div>
+    <div class="form-group">
+      <%= f.label :name, "タグを作るところ" %>
+      <p><label>タグ(,で区切ると複数タグ登録できます)</label></p>
+      <%= f.text_field :name, value: @tag_list, class: "form-control form-control-sm" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :spot, "スポット" %>
+      <%= f.text_field :spot, class: "form-control form-control-sm" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :review, "レビューをつけるところ（とりあえず値を数値をしている）" %>
+      <%= f.number_field :review, class: "form-control form-control-sm" %>
+    </div>
   
-  <div class="form-group">
-    <label>スポット</label>
-    <%= f.text_field :spot %>
-  </div>
-  <div class="form-group">
-    <label>レビューをつけるところ（とりあえず値を数値をしている）</label>
-    <%= f.number_field :review %>
-  </div>
-  
-  <%= f.submit type %>
-  <%= link_to "戻る", contents_path %>
-<% end %>
+    <%= f.submit type, class: "btn btn-primary btn-sm" %>
+    <%= link_to "戻る", contents_path, class: "btn btn-secondary btn-sm" %>
+  <% end %>
+
