--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,24 +1,41 @@
-<p>アイコン</p>
-<h3><%= current_user.name %></h3>
-<h3><%= current_user.email %></h3>
-<p><%= link_to "編集する", edit_information_path %></p>
-<p><%= link_to "パスワードを変更する", edit_user_registration_path %></p>
-<p>
-  <span>
-    投稿一覧
-    <ul>
-      <% current_user.contents.each do |content| %>
-        <li><%= link_to content.title, content_path(content) %></li>
-      <% end %>
-    </ul>
-  </span>
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <div class="card mb-4">
+        <div class="card-body">
+          <div class="d-flex align-items-center mb-3">
+            <div class="mr-3">
+              <p class="mb-0">アイコン</p>
+              <%= image_tag current_user.get_profile_image, size: '100x100', class: 'rounded-circle' %>
+            </div>
+            <div>
+              <h3 class="mb-0"><%= current_user.name %></h3>
+              <p class="mb-0"><%= current_user.email %></p>
+            </div>
+          </div>
+          <div class="mb-3">
+            <h5>投稿一覧</h5>
+            <ul class="list-group">
+              <% current_user.contents.each do |content| %>
+                <li class="list-group-item">
+                  <%= link_to content.title, content_path(content) %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+          <div>
+            <h5>コメントした投稿一覧</h5>
+            <ul class="list-group">
+              <% current_user.comments.each do |comment| %>
+                <li class="list-group-item">
+                  <%= link_to comment.content.title, content_path(comment.content) %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <p><%= link_to "編集する", edit_information_path, class: "btn btn-primary" %></p>
+      <p><%= link_to "パスワードを変更する", edit_user_registration_path, class: "btn btn-primary" %></p>
+    </div>
+  </div>
 
-  <span>
-    コメントした投稿一覧
-    <ul>
-      <% current_user.comments.each do |comment| %>
-        <li><%= link_to comment.content.title, content_path(comment.content) %></li>
-      <% end %>
-    </ul>
-  </span>
-</p>
