--- a/app/views/user/contents/_form.html.erb
+++ b/app/views/user/contents/_form.html.erb
@@ -1,4 +1,3 @@
-<h3>サ活をレビューしよう</h3>
 <%= form_with model: content, local: true, class: "my-form" do |f| %>
   <% if content.errors.any? %>
     <div class="alert alert-danger">
@@ -25,12 +24,11 @@
     <%= f.text_area :text, class: "form-control form-control-sm", rows: 3 %>
   </div>
   <div class="form-group">
-    <%= f.label :name, "タグを作るところ" %>
-    <p><label>タグ(,で区切ると複数タグ登録できます)</label></p>
+    <p><label>タグ(複数登録するには , で区切りましょう)</label></p>
     <%= f.text_field :name, value: @tag_list, class: "form-control form-control-sm" %>
   </div>
   <div class="form-group">
-    <%= f.label :spot, "スポット" %>
+    <%= f.label :spot, "スポット（入力すると候補が表示されます）" %>
     <%= f.text_field :spot, class: "form-control form-control-sm", id: "address", type: "textbox", size: "50", autocomplete: "off" %>
   </div>
 
