--- a/app/views/user/contents/edit.html.erb
+++ b/app/views/user/contents/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>User::Contents#edit</h1>
-<p>Find me in app/views/user/contents/edit.html.erb</p>
+<h3>投稿したレビューを編集できます</h3>
+<%= render partial: "user/contents/form", locals: {type:"変更を保存する",content: @content,method: nil} %>
